--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,17 @@ body{
     flex-direction: column;
 }
 
+#connecterm{
+    position: absolute;
+    display: flex;
+    margin-top: -40vh;
+    margin-left: 40vw;
+    flex-wrap: wrap;
+    cursor: pointer;
+    overflow: hidden;
+    flex-direction: column;
+}
+
 .illustration{
     width: 80vw;
     height: 100vh;
